Fix background on mobiles reg and login pages

--- a/webapp/src/main/webapp/css/form-primary.css
+++ b/webapp/src/main/webapp/css/form-primary.css
@@ -85,7 +85,7 @@
         padding: 15px;
         border: none;
         margin-top: 0px;
-        max-width: 320px;
+        /*max-width: 320px;*/
         height: 100%;
         display: table;
     }
